# replace_dollar

./: LICENSE  README.md  clean.sh  file.tex  main.py  pre-commit.sh  pyproject.toml  reference.tex  script.sh
replace_dollar/: __init__.py  __main__.py  parse_args.py  regex.py
tests/: test_main.py  test_parse.py  test_regex.py
tests/files/: file.tex  main_latex.tex  main_tex.tex  reference.tex
