[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "replace_dollar"
author = "Zoïs Moitier"
author-email = "zois.moitier@kit.edu"
home-page = "https://github.com/zmoitier/replace_dollar"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
description-file = "README.md"
requires-python = ">=3.9"

[tool.flit.metadata.requires-extra]
dev = [
    "isort>=5.9.3",
    "black>=21.7b0",
    "mypy>=0.910",
    "pytest>=6.2.4",
    "pytest-cov>=2.12.1"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=replace_dollar --ff -x --no-cov-on-fail --durations=10"
testpaths = [
    "tests/"
]
