[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "replace_dollar"
authors = [{ name = "Zoïs Moitier", email = "zois.moitier@ensta-paris.fr" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/zmoitier/replace_dollar"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.docformatter]
recursive = true

[tool.pylint.format]
max-line-length = "88"

# [tool.pylint.messages_control]
# disable = ["invalid-name", "non-ascii-name", "too-many-locals", "too-many-arguments"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=replace_dollar --cov-report html --ff -x --no-cov-on-fail --durations=10"
testpaths = ["tests/"]
